# amp-votersim

./: .gitmodules  CMakeLists.txt  README.md
etc/: dev.env
src/: SignalGenerator.cpp  SignalGenerator.h  VoterClient.cpp  VoterClient.h  sim-main.cpp
